# MsGui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.md  packages.json
.github/workflows/: continous-integration-ut.yml
.github/workflows/actions/: Dockerfile  run_ut_gcc.yml  test_ut.sh
cmake/: GitModules.cmake
cmake/Modules/: FindSphinx.cmake  GenerateImage.cmake
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: conf.py  index.rst
include/msgui/: AnimatedSprite.hpp  Area.hpp  BitMap.hpp  BitMapHelpers.hpp  BitwiseChunk.hpp  BufferedText.hpp  Button.hpp  Color.hpp  Factory.hpp  Font.hpp  FrameBuffer.hpp  GraphicDriver.hpp  Gui.hpp  IWidget.hpp  Image.hpp  Position.hpp  Text.hpp  WidgetBase.hpp  Window.hpp
include/msgui/details/: SizeCalculator.hpp
include/msgui/fonts/: Font5x7.hpp  Font8x16.hpp
include/msgui/policies/chunk/: SSD1308ChunkPolicy.hpp
include/msgui/policies/data/: DefaultMemoryPolicy.hpp  FlashMemoryPolicy.hpp
include/msgui/primitives/: IShape.hpp  Line.hpp  Rectangle.hpp
lib/: CMakeLists.txt
page/ci/: index.html
page/ci/data/: binary_size.json
scripts/: generate_image.py  package.json  publish_data.js
scripts/ci/: test_ut.sh
src/: Area.hpp  CMakeLists.txt  GraphicDriver.cpp  Gui.hpp  IWidget.hpp  StaticVector.hpp  Vector2d.hpp  WidgetBase.cpp  WidgetBase.hpp  Window.hpp
src/fonts/: Font5x7.cpp
src/msgui/: Area.hpp  GraphicDriver.cpp
src/primitives/: Line.hpp  Rectangle.hpp
test/: CMakeLists.txt
test/UT/: BitMapTests.cpp  BitwiseChunkTests.cpp  ButtonTests.cpp  CMakeLists.txt  DummyTest.cpp  GraphicDriverTests.cpp  ImageTests.cpp  Runner.cpp  TextTests.cpp  WidgetBaseTests.cpp  WindowTests.cpp
test/UT/printers/: BitwiseChunkPrinter.hpp
test/UT/stubs/: ChunkPolicyForTest.hpp  DriverForTest.hpp  WidgetForTest.hpp
test/simulator/: CMakeLists.txt  ExampleWindow.cpp
test/simulator/lib/: CMakeLists.txt
test/simulator/lib/bitmap/: CMakeLists.txt
test/simulator/simulator/: SSD1306Simulator.hpp  Simulator.hpp
